--- a/NicolasStegmann/.project
+++ b/NicolasStegmann/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>NicolasStegmann</name>
+	<name>MarceloHashimoto</name>
 	<comment></comment>
 	<projects>
 	</projects>
